welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.error
BaggleSeeker:1: error: ';' expected but integer literal found.
if (!isOverBaggle) backward 1 
                            ^