welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.code
if (!isOverBaggle) backward 1